feat: add device type icons and colors
